spacing is corrected in nava bar

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 
 .navbar ul li {
   display: flex;
-  padding: 2% 5%;
+  padding: 1.5% 5%;
 }
 
 /*-----------------------------------------hamburger--------------------------------*/
